<resources>
    <string name="app_name">InternshipBatchSSP</string>
    <string name="login">Login Here</string>
    <string name="welcome">Welcome back You\'ve \nbeen missed!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget your Password?</string>
    <string name="create_account">Create new Account</string>
    <string name="login_button">Login</string>
</resources>