<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/text_30"
            android:text="@string/login"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            />

        <TextView
            style="@style/text_30"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/welcome"
            />



        <EditText
            android:id="@+id/main_email"
            style="@style/edittext"
            android:hint="Email or Contact"
            android:layout_marginTop="@dimen/_30sdp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_camera"
            android:drawablePadding="@dimen/_5sdp"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            >
            <EditText
                android:id="@+id/main_password"
                style="@style/edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/_5sdp"
                />

            <ImageView
                android:id="@+id/main_show"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginRight="@dimen/_20sdp"
                android:src="@drawable/show"
                android:visibility="gone"
                />


            <ImageView
                android:id="@+id/main_hide"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginRight="@dimen/_20sdp"
                android:src="@drawable/invisible"
                />


        </FrameLayout>


        <TextView
            android:id="@+id/main_forget_password"
            style="@style/text_16"
            android:text="@string/forget_password"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="end"
            android:layout_marginRight="@dimen/_15sdp"
            />


        <TextView
            android:id="@+id/main_create_account"
            style="@style/text_16"
            android:text="@string/create_account"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            />


        <Button
            android:id="@+id/main_login_button"
            style="@style/button_20"
            android:text="@string/login_button"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            app:backgroundTint="@null"
            android:layout_marginBottom="@dimen/_30sdp"
            />


    </LinearLayout>



</ScrollView>